# Harmonizer

./: .gitignore  README.md  archive copy.json  main.py  notes.ru  pyproject.toml  results.musicxml  run-server.sh  score_reader.py  setup.py
frontpage/: dictionaryTest.html  frontpage.css  playspace.css  playspace.html  playspace.js  website.html
harmoniz/: chordTones.py  diminished.py  fileSecurity.py  octave_correction.py  results.musicxml  rules_tones.py  style_completion.json  toolCall.py
harmoniz/h_test/: Bran.musicxml  JohnGriff.musicxml  Micheal.musicxml
harmoniz/results/: Ko_Ko_Modified.musicxml
harmonizer_2025/: __init__.py  cli.py  config.py  main.py
harmonizer_2025/writing/: chord_writer.py
harmonizer_2025/writing/data/: bible.json  gemBible.json  gptBible.json
harmonizer_2025/writing/data/originals/: gptBible.json  originalGem.json
input/: LadyBeGood.musicxml  SonnyStitt.musicxml  chuWithChords.musicxml  corrupt.musicxml  rainbowMist.musicxml
jazzsoli/: __init__.py  main.py
jazzsoli/jazzsolify.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
jazzsoli/parsing/: score_reader.py
jazzsoli/writing/: chord_writer.py
jazzsoli/writing/data/: chordRouter.json
jazzsolify.egg-info/: SOURCES.txt  entry_points.txt  top_level.txt
output/: chuWithChords_modified.musicxml
testFiles/: chuNoChords.musicxml
testResults/: chuWithChords_modified.musicxml
